<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kit.ratanaktepi.toolbar.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reuse"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/reusing"
        android:layout_below="@+id/toolbar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/styling"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/styling"
        android:layout_below="@+id/reuse"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/custom"
        android:layout_below="@+id/styling"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/translucent"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/translucent"
        android:layout_below="@+id/custom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/react"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/react"
        android:layout_below="@+id/translucent"/>

</RelativeLayout>
